--- a/src/partie_3.tex
+++ b/src/partie_3.tex
@@ -1,438 +1,29 @@
 \cleardoublepage
 
-\chapter{Chapter 3}
+\chapter{Résultats - Discussions}
 
 
 
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/ISIMA_logo.png}
-  \caption{Image 1}
-\end{figure}
+\section{Interface graphique utilisateur}
 
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 2}
-\end{figure}
+J'ai été libre de programmer la première version de l'interface graphique, comportant les fonctionnalités demandées par le client. Ce dernier a participé à sa réalisation en effectuant diverses critiques et réagencements des éléments afin d'optimiser l'ergonomie de l'application.
 
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 3}
-\end{figure}
+L'application est composée d'une barre latéral sur la partie gauche, proposant un menu. Un menu correspond à un module de l'application, et chaque sous-menu correspond à une fonctionnalité du module. Les écrans peuvent peuvent être de plusieurs type :
+\begin{enumerate}
+	\item Un écran de recherche, avec 
+\end{enumerate}
 
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 4}
-\end{figure}
+La figure \ref{TODO} est une capture d'écran de l'application.
 
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 5}
-\end{figure}
 
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 6}
-\end{figure}
+\section{Base de données}
 
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 7}
-\end{figure}
+Le modèle d
 
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 8}
-\end{figure}
+TODO: dépendances manquantes (spécifiées à la dernière minute), importante incomplètes
 
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 9}
-\end{figure}
 
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 10}
-\end{figure}
 
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 11}
-\end{figure}
+~~\\-------------
 
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 12}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 13}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 14}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 15}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 16}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 17}
-\end{figure}
-
-\begin{figure}[h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 18}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 1}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 2}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 3}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 4}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 5}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 6}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 7}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 8}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 9}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 10}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 11}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 12}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 13}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 14}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 15}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 16}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 17}
-\end{figure}
-
-\begin{figure}[h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 18}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 1}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 2}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 3}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 4}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 5}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 6}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 7}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 8}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 9}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 10}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 11}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 12}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 13}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 14}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 15}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 16}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 17}
-\end{figure}
-
-\begin{figure}[h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 18}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 1}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 2}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 3}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 4}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 5}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 6}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 7}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 8}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 9}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 10}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 11}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 12}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 13}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 14}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 15}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 16}
-\end{figure}
-
-\begin{figure}[!h]
-  \center
-  \includegraphics[width=1cm]{img/test.jpg}
-  \caption{Image 17}
-\end{figure}
-
+tables de paramétrage
