--- a/src/partie_2.tex
+++ b/src/partie_2.tex
@@ -250,7 +250,16 @@ Cette technologie nécessite l'installation du plugin, qui est un sous-ensemble 
 
 Une des spécifications de Silverlight est l'impossibilité d'appeler des services web de manière synchrone, c'est à dire que la fonction appelante attend la réponse. En effet, lors d'un appel l'exécution continue et une événement est émis lors de la réception de la réponse. Cette solution permet de ne pas bloquer l'interface de l'utilisateur, qui pourrait penser à un plantage de l'application. Mais l'inconvénient est l'augmentation de la complexité de programmation car il est nécessaire de contrôler plusieurs fils d'exécution en parallèle.
 
-~~\\-----------------------------
+\subsubsection{ASP.NET}
+
+Un projet "Web Silverlight" est composée de deux parties : un projet purement Silverlight que l'on utiliser normalement sur l'ordinateur, un projet web permettant d'exposer l'application.
+
+Le projet web est réalisé en \textit{ASP.NET}. C'est une technologie Microsoft de programmation web, permettant de créer des sites dynamiques. Il est inclus
+TODO: IIS
+
+
+~~\\--------------------------------------------------
+
 Reporting services
 Parler des versions ?
 SignalR
