--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -12,42 +12,26 @@
 
 %%%%%%%%%% Contexte général %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-En informatique, la compatibilité est la capacité d'un logiciel ou d'un matériel de fonctionner sur les différents systèmes, sans en altérer le fonctionnement.
-Dans le domaine du logiciel, cela peut concerner un système d'exploitation, un programme, ou même une librairie.
-Le problème de compatibilité le plus connu est celui entre Windows, marque propriétaire, et Linux, solution gratuite et ouverte à tous.
-
+Dans de nombreux contextes le gain de temps est le maître mot. Le domaine professionnel ne fait pas exception à la règle, imposant une productivité de plus en plus élevée. Ainsi l'utilisation d'outils de plus en plus performants permet de minimiser le temps passé à effectuer une tache.
 
 %%%%%%%%%% Context de l'entreprise %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Dans le domaine de la recherche par exemple, il existe des outils scientifiques qui ne sont compatibles uniquement sous Linux.
-Lorsque les utilisateurs possèdent un ordinateur ayant comme système d'exploitation Windows, il leur est donc impossible de les utiliser de manière simple.
+Les technologies évoluent au fil des années, imposant la mise à jour des anciens outils pour éviter toute faille de sécurité, améliorer l'ergonomie, mais aussi la simplicité d'utilisation.
 \\
-
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%% Problème %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Cependant, il existe plusieurs techniques permettant de contourner ce problème, chacune présentant des avantages et des inconvénients.
-\begin{itemize}
-	\item La cross-compilation, qui consiste à compiler le programme sur la machine compatible avant d'exporter le programme vers la machine désirée, n'est possible que dans de rares cas.
-	\item L'installation d'un autre système d'exploitation, compatible avec l'outil, sur une autre partition du disque-dur, appelé le "multi-boot", demande un redémarrage de l'ordinateur entre chaque échange de système d'exploitation.
-	\item Enfin, la virtualisation, quant à elle, consiste à émuler un système d'exploitation à l'intérieur même du système d'exploitation utilisé.
-Cette solution est possible dans tous les cas, et permet le meilleur compromis entre temps de mise en œuvre, et puissance de calcul.
+Lorsqu'un logiciel existe depuis plus de dix ans, il est souvent nécessaire de le faire évoluer pour subvenir aux besoins actuels. Mais lorsque celui-ci a été développé par une personne ne possédant pas des compétences en informatique, il est quasiment impossible de le faire évoluer. La meilleure solution est donc de produire une nouvelle solution qui subviendra aux besoins actuels mais permettant l'ajout de nouvelles fonctionnalités.
 \\
-\end{itemize}
-
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%% Objectif %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-L'objet de cette étude sera d'étudier et de développer une solution de virtualisation, simple d'utilisation voir transparente pour l'utilisateur, qui permettra d'utiliser des outils à partir d'une interface graphique.
+L'objet de cette étude sera d'étudier les besoins du client, puis d'implémenter la nouvelle solution. Celle-ci devra remplir les mêmes fonctions que la solution actuelle, en permettant l'ajout de nouvelles.
 \\
-
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%% Démarche et plan %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
