--- a/src/glossaire.tex
+++ b/src/glossaire.tex
@@ -9,4 +9,6 @@
 
 TODO: commandes LaTeX
 
+Bibliothèque : TODO
+
 Framework : ensemble de composants logiciels permettant le développement le développement rapide d'applications.
